...
  {
    "id": 99,
    "name": "Item 99"
  },
  {
    "id": 100,
    "name": "Item 100"
  },
  {
    "id": 101,
    "name": "Item 101"
  },
  {
...
  {
    "id": 9999,
    "name": "Item 9999"
  },
  {
    "id": 10000,
    "name": "Item 10000"
  }
]

export const COLUMNS = 3
export const MIN = 0
export const MAX = 1
...
