export const Words = {
  performanceTest: "Performance Test",
  uiPerformance: "UI PERFORMANCE",
  resIntensiveTask: "RES : INTENSIVE TASK",
  inputResponsiveness: "INPUT RESPONSIVENESS",
  hideList: "Hide List",
  showList: "Show List",
};
